Slight text updates of Inferno's 3rd scenario

--- a/campaigns/inferno_deal_with_the_devil.tex
+++ b/campaigns/inferno_deal_with_the_devil.tex
@@ -104,7 +104,7 @@ Take the following Map tiles and set them up as shown in the scenario map layout
 
 The Enemy Charging Rampart Hero \#1 starts on the center field of the S4 Starting Map tile.
 
-The Enemy Charging Castle Heroes \#1 start on both the Settlement Field of the F3 tile, and the center field of S3 Starting Map tile.
+The Enemy Charging Castle Hero \#1 starts on the center field of S3 Starting Map tile.
 
 Place your Hero on the center field of the S6 Inferno Starting Map tile.
 
@@ -148,7 +148,7 @@ Clan Kreelah fails to defend Klessive against the Enemy Charging Heros attemptin
 
 \textbf{\nth{7} Round:}
 \begin{itemize}
-  \item The Enemy Castle Charging Heroes \#2 appear on both the Settlement field of the F3 tile, and the center field of S3 Starting Map tile.
+  \item The Enemy Castle Charging Hero \#2 appears on the Settlement field of the F3 tile or on the center field of S3 Starting Map tile (your choice).
   \item The Enemy Rampart Charging Hero \#2 appears on the center field of the S4 Starting Map tile.
 \end{itemize}
 
@@ -186,7 +186,7 @@ During this ``Inferno'' campaign scenario, the following rules apply:
   \item If an Enemy Charging Hero enters a map tile or field that your Main Hero is on (exception is if you are in
     your Inferno city Kleesive), or if a charging hero attacks Kleesive and you are not present in your city
     of Kleesive, you are immediately transported back to Kleesive, you lose any remaining Movement Points
-    you have, lose 3 gold, gain a negative morale, and randomly discard 1 card from your hand.
+    you have, lose 3 \svg{gold}, gain a negative morale, and randomly discard 1 card from your hand.
   \item Enemy Charging Heroes move only 2 MPs. The Final Charging Army moves 4 MPs. They take the shortest
     route to Kleesive. If you own a mine in a map tile they enter, they will capture the mine (but will not
     ``backtrack'' to do so), and then continue along the shortest route to Kleesive. They ignore everything
@@ -196,8 +196,8 @@ During this ``Inferno'' campaign scenario, the following rules apply:
   \item Castle and Rampart already have all mines controlled in their territory (non-Inferno map tiles). Place enemy
     cubes on all of their mines.
   \item Your walls, gates, and arrow tower in Kleesive are completely rebuilt after each battle.
-  \item Enemy flying units will fly over walls and gates to attack your units whenever possible.
-  \item Enemy ranged units will always attack the Arrow Tower once there are no other ranged units to attack.
+  \item Enemy \svg{unit_flying} units will fly over walls and gates to attack your units whenever possible.
+  \item Enemy \svg{unit_ranged} units will always attack the Arrow Tower once there are no other \svg{unit_ranged} units to attack.
   \item Enemy units will always attack your units if possible. Only when that is not possible, then the gate,
     and then walls will be attacked.
 \end{itemize}
