--- a/translations/inferno_deal_with_the_devil.tex/inferno_deal_with_the_devil.tex.pot
+++ b/translations/inferno_deal_with_the_devil.tex/inferno_deal_with_the_devil.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2024-07-22 17:19+0200\n"
+"POT-Creation-Date: 2024-07-24 22:59+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -65,7 +65,7 @@ msgstr ""
 #. type: multicols*
 #: coops/sentinels.tex:147 clash/the_hunt.tex:43
 #: campaigns/inferno_steadwicks_fall.tex:199
-#: campaigns/inferno_deal_with_the_devil.tex:156 sections/credits.tex:25
+#: campaigns/inferno_deal_with_the_devil.tex:156 sections/credits.tex:26
 #, no-wrap
 msgid ""
 "\\columnbreak\n"
@@ -437,7 +437,7 @@ msgstr ""
 #: campaigns/inferno_deal_with_the_devil.tex:108
 #, no-wrap
 msgid ""
-"The Enemy Charging Castle Heroes \\#1 start on both the Settlement Field of the F3 tile, and the center field of S3 Starting Map tile.\n"
+"The Enemy Charging Castle Hero \\#1 starts on the center field of S3 Starting Map tile.\n"
 "\n"
 msgstr ""
 
@@ -535,7 +535,7 @@ msgstr ""
 msgid ""
 "\\textbf{\\nth{7} Round:}\n"
 "\\begin{itemize}\n"
-"  \\item The Enemy Castle Charging Heroes \\#2 appear on both the Settlement field of the F3 tile, and the center field of S3 Starting Map tile.\n"
+"  \\item The Enemy Castle Charging Hero \\#2 appears on the Settlement field of the F3 tile or on the center field of S3 Starting Map tile (your choice).\n"
 "  \\item The Enemy Rampart Charging Hero \\#2 appears on the center field of the S4 Starting Map tile.\n"
 "\\end{itemize}\n"
 "\n"
@@ -596,7 +596,7 @@ msgid ""
 "  \\item If an Enemy Charging Hero enters a map tile or field that your Main Hero is on (exception is if you are in\n"
 "    your Inferno city Kleesive), or if a charging hero attacks Kleesive and you are not present in your city\n"
 "    of Kleesive, you are immediately transported back to Kleesive, you lose any remaining Movement Points\n"
-"    you have, lose 3 gold, gain a negative morale, and randomly discard 1 card from your hand.\n"
+"    you have, lose 3 \\svg{gold}, gain a negative morale, and randomly discard 1 card from your hand.\n"
 "  \\item Enemy Charging Heroes move only 2 MPs. The Final Charging Army moves 4 MPs. They take the shortest\n"
 "    route to Kleesive. If you own a mine in a map tile they enter, they will capture the mine (but will not\n"
 "    ``backtrack'' to do so), and then continue along the shortest route to Kleesive. They ignore everything\n"
@@ -606,8 +606,8 @@ msgid ""
 "  \\item Castle and Rampart already have all mines controlled in their territory (non-Inferno map tiles). Place enemy\n"
 "    cubes on all of their mines.\n"
 "  \\item Your walls, gates, and arrow tower in Kleesive are completely rebuilt after each battle.\n"
-"  \\item Enemy flying units will fly over walls and gates to attack your units whenever possible.\n"
-"  \\item Enemy ranged units will always attack the Arrow Tower once there are no other ranged units to attack.\n"
+"  \\item Enemy \\svg{unit_flying} units will fly over walls and gates to attack your units whenever possible.\n"
+"  \\item Enemy \\svg{unit_ranged} units will always attack the Arrow Tower once there are no other \\svg{unit_ranged} units to attack.\n"
 "  \\item Enemy units will always attack your units if possible. Only when that is not possible, then the gate,\n"
 "    and then walls will be attacked.\n"
 "\\end{itemize}\n"
