--- a/translations/inferno_deal_with_the_devil.tex/pl.po
+++ b/translations/inferno_deal_with_the_devil.tex/pl.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-07-22 17:19+0200\n"
+"POT-Creation-Date: 2024-07-24 22:59+0200\n"
 "PO-Revision-Date: 2024-07-02 09:52+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -73,7 +73,7 @@ msgstr ""
 #. type: multicols*
 #: coops/sentinels.tex:147 clash/the_hunt.tex:43
 #: campaigns/inferno_steadwicks_fall.tex:199
-#: campaigns/inferno_deal_with_the_devil.tex:156 sections/credits.tex:25
+#: campaigns/inferno_deal_with_the_devil.tex:156 sections/credits.tex:26
 #, no-wrap
 msgid ""
 "\\columnbreak\n"
@@ -471,7 +471,7 @@ msgid ""
 "cards are not played again immediately, but instead are played as soon as the next unit is able to use them.\n"
 "\n"
 msgstr ""
-"\\\\Obie karty Artefaktów wszystkich Szarżujących Armii traktowane są jako Umiejętności i używają górnego ,,słabszego'' efektu.\n"
+"Obie karty Artefaktów wszystkich Szarżujących Armii traktowane są jako Umiejętności i używają górnego ,,słabszego'' efektu.\n"
 ",,Miecz Ognia Piekielnego'' będzie używany w atakach i kontratakach. Nie jest używany podczas atakowania Murów lub Bram\n"
 "i pozostaje aktywny na jednostce. Jeśli zostanie dobrana karta ,,Tarcza Potępionych'', jej efekt wchodzi w życie, gdy\n"
 "jakakolwiek Jednostka Szarżującej Armii otrzyma obrażenia od ataku lub kontrataku. Jeśli karta Umiejętności AI zaleca ,,powtórzenie'', karty Artefaktów\n"
@@ -540,11 +540,14 @@ msgstr "Szarżująca Armia Bastionu \\#1 zaczyna na środkowym polu Kafelka S4.\
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:108
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "The Enemy Charging Rampart Hero \\#1 starts on the center field of the S4 Starting Map tile.\n"
+#| "\n"
 msgid ""
-"The Enemy Charging Castle Heroes \\#1 start on both the Settlement Field of the F3 tile, and the center field of S3 Starting Map tile.\n"
+"The Enemy Charging Castle Hero \\#1 starts on the center field of S3 Starting Map tile.\n"
 "\n"
-msgstr "\\\\Szarżująca Armia Zamku \\#1 zaczyna na polu Osady Kafelka F3 oraz na środkowym polu Kafelka S3.\n"
+msgstr "Szarżująca Armia Bastionu \\#1 zaczyna na środkowym polu Kafelka S4.\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:110
@@ -552,7 +555,9 @@ msgstr "\\\\Szarżująca Armia Zamku \\#1 zaczyna na polu Osady Kafelka F3 oraz 
 msgid ""
 "Place your Hero on the center field of the S6 Inferno Starting Map tile.\n"
 "\n"
-msgstr "\\\\Umieść swojego Bohatera na środkowym polu Początkowego Kafelka Mapy Inferno S6.\n"
+msgstr ""
+"Umieść swojego Bohatera na środkowym polu Początkowego Kafelka Mapy Inferno S6.\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:112
@@ -561,7 +566,7 @@ msgid ""
 "You cannot recruit a Secondary Hero.\n"
 "\n"
 msgstr ""
-"\\\\Nie możesz zrekrutować Bohatera Pomocniczego.\n"
+"Nie możesz zrekrutować Bohatera Pomocniczego.\n"
 "\n"
 
 #. type: multicols*
@@ -661,11 +666,18 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:154
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{\\nth{7} Round:}\n"
+#| "\\begin{itemize}\n"
+#| "  \\item The Enemy Castle Charging Heroes \\#2 appear on both the Settlement field of the F3 tile, and the center field of S3 Starting Map tile.\n"
+#| "  \\item The Enemy Rampart Charging Hero \\#2 appears on the center field of the S4 Starting Map tile.\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
 "\\textbf{\\nth{7} Round:}\n"
 "\\begin{itemize}\n"
-"  \\item The Enemy Castle Charging Heroes \\#2 appear on both the Settlement field of the F3 tile, and the center field of S3 Starting Map tile.\n"
+"  \\item The Enemy Castle Charging Hero \\#2 appears on the Settlement field of the F3 tile or on the center field of S3 Starting Map tile (your choice).\n"
 "  \\item The Enemy Rampart Charging Hero \\#2 appears on the center field of the S4 Starting Map tile.\n"
 "\\end{itemize}\n"
 "\n"
@@ -743,7 +755,31 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:204
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\begin{itemize}\n"
+#| "  \\item Your Main Hero can only travel in Inferno Map Tiles. You cannot enter any other Map Tile type.\n"
+#| "  \\item You cannot attack Enemy Charging Heroes. You can only defend against them while inside of Kleesive.\n"
+#| "  \\item Gain 3 \\svg{gold} when you defeat a Charging Hero's Army.\n"
+#| "  \\item If an Enemy Charging Hero enters a map tile or field that your Main Hero is on (exception is if you are in\n"
+#| "    your Inferno city Kleesive), or if a charging hero attacks Kleesive and you are not present in your city\n"
+#| "    of Kleesive, you are immediately transported back to Kleesive, you lose any remaining Movement Points\n"
+#| "    you have, lose 3 gold, gain a negative morale, and randomly discard 1 card from your hand.\n"
+#| "  \\item Enemy Charging Heroes move only 2 MPs. The Final Charging Army moves 4 MPs. They take the shortest\n"
+#| "    route to Kleesive. If you own a mine in a map tile they enter, they will capture the mine (but will not\n"
+#| "    ``backtrack'' to do so), and then continue along the shortest route to Kleesive. They ignore everything\n"
+#| "    else. They also make use of Stables 1 MP bonus.\n"
+#| "  \\item Enemy Charging Heros always move amongst each to not ``block'' each other's paths (thus slowing each\n"
+#| "    other down). The Enemy Charging Hero that can get closest to Kleesive will move before any others.\n"
+#| "  \\item Castle and Rampart already have all mines controlled in their territory (non-Inferno map tiles). Place enemy\n"
+#| "    cubes on all of their mines.\n"
+#| "  \\item Your walls, gates, and arrow tower in Kleesive are completely rebuilt after each battle.\n"
+#| "  \\item Enemy flying units will fly over walls and gates to attack your units whenever possible.\n"
+#| "  \\item Enemy ranged units will always attack the Arrow Tower once there are no other ranged units to attack.\n"
+#| "  \\item Enemy units will always attack your units if possible. Only when that is not possible, then the gate,\n"
+#| "    and then walls will be attacked.\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
 "\\begin{itemize}\n"
 "  \\item Your Main Hero can only travel in Inferno Map Tiles. You cannot enter any other Map Tile type.\n"
@@ -752,7 +788,7 @@ msgid ""
 "  \\item If an Enemy Charging Hero enters a map tile or field that your Main Hero is on (exception is if you are in\n"
 "    your Inferno city Kleesive), or if a charging hero attacks Kleesive and you are not present in your city\n"
 "    of Kleesive, you are immediately transported back to Kleesive, you lose any remaining Movement Points\n"
-"    you have, lose 3 gold, gain a negative morale, and randomly discard 1 card from your hand.\n"
+"    you have, lose 3 \\svg{gold}, gain a negative morale, and randomly discard 1 card from your hand.\n"
 "  \\item Enemy Charging Heroes move only 2 MPs. The Final Charging Army moves 4 MPs. They take the shortest\n"
 "    route to Kleesive. If you own a mine in a map tile they enter, they will capture the mine (but will not\n"
 "    ``backtrack'' to do so), and then continue along the shortest route to Kleesive. They ignore everything\n"
@@ -762,8 +798,8 @@ msgid ""
 "  \\item Castle and Rampart already have all mines controlled in their territory (non-Inferno map tiles). Place enemy\n"
 "    cubes on all of their mines.\n"
 "  \\item Your walls, gates, and arrow tower in Kleesive are completely rebuilt after each battle.\n"
-"  \\item Enemy flying units will fly over walls and gates to attack your units whenever possible.\n"
-"  \\item Enemy ranged units will always attack the Arrow Tower once there are no other ranged units to attack.\n"
+"  \\item Enemy \\svg{unit_flying} units will fly over walls and gates to attack your units whenever possible.\n"
+"  \\item Enemy \\svg{unit_ranged} units will always attack the Arrow Tower once there are no other \\svg{unit_ranged} units to attack.\n"
 "  \\item Enemy units will always attack your units if possible. Only when that is not possible, then the gate,\n"
 "    and then walls will be attacked.\n"
 "\\end{itemize}\n"
