--- a/translations/inferno_deal_with_the_devil.tex/pl.po
+++ b/translations/inferno_deal_with_the_devil.tex/pl.po
@@ -781,7 +781,7 @@ msgstr ""
 "    tracisz 3 \\svg{gold}, otrzymasz negatywne morale i losowo odrzucasz 1 kartę z ręki.\n"
 "  \\item Szarżujące Armie poruszają się tylko 2 Punkty Ruchu. Ostatnia Szarżująca Armia porusza się 4 Punkty Ruchu. Podążają najkrótszą\n"
 "    drogą do Kleesive. Jeśli posiadasz kopalnię na kafelku mapy, na który wchodzą, przejmą kopalnię (ale nie ,,wrócą się'' po nią),\n"
-"    a następnie kontynuują najkrótszą drogę do Kleesive. Ignorują wszystko inne. Korzystają także z bonusu 1 PR z Stajni.\n"
+"    a następnie kontynuują najkrótszą drogę do Kleesive. Ignorują wszystko inne. Korzystają także z bonusu 1 Punktu Ruchu ze Stajni.\n"
 "  \\item Szarżujące Armie zawsze poruszają się tak, aby nie ,,blokować'' sobie nawzajem dróg (spowalniając się nawzajem).\n"
 "    Szarżujący Armia, która jest najbliżej Kleesive, będzie poruszała się przed innymi.\n"
 "  \\item Zamek i Bastion mają już zdobyte wszystkie kopalnie na swoim terytorium (kafelki mapy nie-Inferno). Umieść kostki wroga na\n"
