Add one more glyph

--- a/campaigns/inferno_deal_with_the_devil.tex
+++ b/campaigns/inferno_deal_with_the_devil.tex
@@ -186,7 +186,7 @@ During this ``Inferno'' campaign scenario, the following rules apply:
   \item If an Enemy Charging Hero enters a map tile or field that your Main Hero is on (exception is if you are in
     your Inferno city Kleesive), or if a charging hero attacks Kleesive and you are not present in your city
     of Kleesive, you are immediately transported back to Kleesive, you lose any remaining Movement Points
-    you have, lose 3 \svg{gold}, gain a negative morale, and randomly discard 1 card from your hand.
+    you have, lose 3 \svg{gold}, gain \svg{morale_negative}, and randomly discard 1 card from your hand.
   \item Enemy Charging Heroes move only 2 MPs. The Final Charging Army moves 4 MPs. They take the shortest
     route to Kleesive. If you own a mine in a map tile they enter, they will capture the mine (but will not
     ``backtrack'' to do so), and then continue along the shortest route to Kleesive. They ignore everything
