--- a/translations/inferno_deal_with_the_devil.tex/pl.po
+++ b/translations/inferno_deal_with_the_devil.tex/pl.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-07-24 22:59+0200\n"
+"POT-Creation-Date: 2024-07-28 00:20+0200\n"
 "PO-Revision-Date: 2024-07-02 09:52+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -674,7 +674,7 @@ msgid ""
 msgstr ""
 "\\textbf{Runda 7.:}\n"
 "\\begin{itemize}\n"
-"  \\item Szarżująca Armia Zamku \\#2 pojawia się zarówno na polu Osady kafelka F3, jak i na środkowym polu Początkowego Kafelka Mapy S3.\n"
+"  \\item Szarżująca Armia Zamku \\#2 pojawia się na polu Osady kafelka F3 albo na środkowym polu Początkowego Kafelka Mapy S3 (twój wybór).\n"
 "  \\item Szarżująca Armia Bastionu \\#2 pojawia się na środkowym polu Początkowego Kafelka Mapy S4.\n"
 "\\end{itemize}\n"
 "\n"
@@ -754,7 +754,7 @@ msgid ""
 "  \\item If an Enemy Charging Hero enters a map tile or field that your Main Hero is on (exception is if you are in\n"
 "    your Inferno city Kleesive), or if a charging hero attacks Kleesive and you are not present in your city\n"
 "    of Kleesive, you are immediately transported back to Kleesive, you lose any remaining Movement Points\n"
-"    you have, lose 3 \\svg{gold}, gain a negative morale, and randomly discard 1 card from your hand.\n"
+"    you have, lose 3 \\svg{gold}, gain \\svg{morale_negative}, and randomly discard 1 card from your hand.\n"
 "  \\item Enemy Charging Heroes move only 2 MPs. The Final Charging Army moves 4 MPs. They take the shortest\n"
 "    route to Kleesive. If you own a mine in a map tile they enter, they will capture the mine (but will not\n"
 "    ``backtrack'' to do so), and then continue along the shortest route to Kleesive. They ignore everything\n"
@@ -777,8 +777,8 @@ msgstr ""
 "  \\item Zyskaj 3 \\svg{gold}, gdy pokonasz Szarżującą Armię.\n"
 "  \\item Jeśli Szarżująca Armia wejdzie na kafelek lub pole, na którym znajduje się Twój Bohater Główny (wyjątek stanowi, gdy jesteś w\n"
 "    swoim mieście Inferno Kleesive), lub jeśli Szarżująca Armia zaatakuje Kleesive, a Ty nie jesteś obecny w swoim mieście\n"
-"    Kleesive, natychmiast zostaniesz przeniesiony z powrotem do Kleesive, tracisz wszystkie pozostałe Punkty Ruchu,\n"
-"    tracisz 3 \\svg{gold}, otrzymasz negatywne morale i losowo odrzucasz 1 kartę z ręki.\n"
+"    Kleesive, natychmiast zostajesz przeniesiony z powrotem do Kleesive, tracisz wszystkie pozostałe Punkty Ruchu,\n"
+"    tracisz 3 \\svg{gold}, otrzujesz \\svg{morale_negative} i losowo odrzucasz 1 kartę z ręki.\n"
 "  \\item Szarżujące Armie poruszają się tylko 2 Punkty Ruchu. Ostatnia Szarżująca Armia porusza się 4 Punkty Ruchu. Podążają najkrótszą\n"
 "    drogą do Kleesive. Jeśli posiadasz kopalnię na kafelku mapy, na który wchodzą, przejmą kopalnię (ale nie ,,wrócą się'' po nią),\n"
 "    a następnie kontynuują najkrótszą drogę do Kleesive. Ignorują wszystko inne. Korzystają także z bonusu 1 Punktu Ruchu ze Stajni.\n"
