--- a/translations/inferno_deal_with_the_devil.tex/pl.po
+++ b/translations/inferno_deal_with_the_devil.tex/pl.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-07-24 22:59+0200\n"
+"POT-Creation-Date: 2024-07-28 00:20+0200\n"
 "PO-Revision-Date: 2024-07-02 09:52+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -540,14 +540,11 @@ msgstr "Szarżująca Armia Bastionu \\#1 zaczyna na środkowym polu Kafelka S4.\
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:108
-#, fuzzy, no-wrap
-#| msgid ""
-#| "The Enemy Charging Rampart Hero \\#1 starts on the center field of the S4 Starting Map tile.\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "The Enemy Charging Castle Hero \\#1 starts on the center field of S3 Starting Map tile.\n"
 "\n"
-msgstr "Szarżująca Armia Bastionu \\#1 zaczyna na środkowym polu Kafelka S4.\n"
+msgstr "Szarżująca Armia Zamku \\#1 zaczyna na środkowym polu Kafelka S4.\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:110
@@ -666,14 +663,7 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:154
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{\\nth{7} Round:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item The Enemy Castle Charging Heroes \\#2 appear on both the Settlement field of the F3 tile, and the center field of S3 Starting Map tile.\n"
-#| "  \\item The Enemy Rampart Charging Hero \\#2 appears on the center field of the S4 Starting Map tile.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{\\nth{7} Round:}\n"
 "\\begin{itemize}\n"
@@ -684,7 +674,7 @@ msgid ""
 msgstr ""
 "\\textbf{Runda 7.:}\n"
 "\\begin{itemize}\n"
-"  \\item Bohaterowie Szarżującej Armii Zamku \\#2 pojawiają się zarówno na polu Osady kafelka F3, jak i na środkowym polu Początkowego Kafelka Mapy S3.\n"
+"  \\item Szarżująca Armia Zamku \\#2 pojawia się na polu Osady kafelka F3 albo na środkowym polu Początkowego Kafelka Mapy S3 (twój wybór).\n"
 "  \\item Szarżująca Armia Bastionu \\#2 pojawia się na środkowym polu Początkowego Kafelka Mapy S4.\n"
 "\\end{itemize}\n"
 "\n"
@@ -755,31 +745,7 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:204
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "  \\item Your Main Hero can only travel in Inferno Map Tiles. You cannot enter any other Map Tile type.\n"
-#| "  \\item You cannot attack Enemy Charging Heroes. You can only defend against them while inside of Kleesive.\n"
-#| "  \\item Gain 3 \\svg{gold} when you defeat a Charging Hero's Army.\n"
-#| "  \\item If an Enemy Charging Hero enters a map tile or field that your Main Hero is on (exception is if you are in\n"
-#| "    your Inferno city Kleesive), or if a charging hero attacks Kleesive and you are not present in your city\n"
-#| "    of Kleesive, you are immediately transported back to Kleesive, you lose any remaining Movement Points\n"
-#| "    you have, lose 3 gold, gain a negative morale, and randomly discard 1 card from your hand.\n"
-#| "  \\item Enemy Charging Heroes move only 2 MPs. The Final Charging Army moves 4 MPs. They take the shortest\n"
-#| "    route to Kleesive. If you own a mine in a map tile they enter, they will capture the mine (but will not\n"
-#| "    ``backtrack'' to do so), and then continue along the shortest route to Kleesive. They ignore everything\n"
-#| "    else. They also make use of Stables 1 MP bonus.\n"
-#| "  \\item Enemy Charging Heros always move amongst each to not ``block'' each other's paths (thus slowing each\n"
-#| "    other down). The Enemy Charging Hero that can get closest to Kleesive will move before any others.\n"
-#| "  \\item Castle and Rampart already have all mines controlled in their territory (non-Inferno map tiles). Place enemy\n"
-#| "    cubes on all of their mines.\n"
-#| "  \\item Your walls, gates, and arrow tower in Kleesive are completely rebuilt after each battle.\n"
-#| "  \\item Enemy flying units will fly over walls and gates to attack your units whenever possible.\n"
-#| "  \\item Enemy ranged units will always attack the Arrow Tower once there are no other ranged units to attack.\n"
-#| "  \\item Enemy units will always attack your units if possible. Only when that is not possible, then the gate,\n"
-#| "    and then walls will be attacked.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item Your Main Hero can only travel in Inferno Map Tiles. You cannot enter any other Map Tile type.\n"
@@ -788,7 +754,7 @@ msgid ""
 "  \\item If an Enemy Charging Hero enters a map tile or field that your Main Hero is on (exception is if you are in\n"
 "    your Inferno city Kleesive), or if a charging hero attacks Kleesive and you are not present in your city\n"
 "    of Kleesive, you are immediately transported back to Kleesive, you lose any remaining Movement Points\n"
-"    you have, lose 3 \\svg{gold}, gain a negative morale, and randomly discard 1 card from your hand.\n"
+"    you have, lose 3 \\svg{gold}, gain \\svg{morale_negative}, and randomly discard 1 card from your hand.\n"
 "  \\item Enemy Charging Heroes move only 2 MPs. The Final Charging Army moves 4 MPs. They take the shortest\n"
 "    route to Kleesive. If you own a mine in a map tile they enter, they will capture the mine (but will not\n"
 "    ``backtrack'' to do so), and then continue along the shortest route to Kleesive. They ignore everything\n"
@@ -811,18 +777,18 @@ msgstr ""
 "  \\item Zyskaj 3 \\svg{gold}, gdy pokonasz Szarżującą Armię.\n"
 "  \\item Jeśli Szarżująca Armia wejdzie na kafelek lub pole, na którym znajduje się Twój Bohater Główny (wyjątek stanowi, gdy jesteś w\n"
 "    swoim mieście Inferno Kleesive), lub jeśli Szarżująca Armia zaatakuje Kleesive, a Ty nie jesteś obecny w swoim mieście\n"
-"    Kleesive, natychmiast zostaniesz przeniesiony z powrotem do Kleesive, tracisz wszystkie pozostałe Punkty Ruchu,\n"
-"    tracisz 3 złota, otrzymasz negatywne morale i losowo odrzucasz 1 kartę z ręki.\n"
+"    Kleesive, natychmiast zostajesz przeniesiony z powrotem do Kleesive, tracisz wszystkie pozostałe Punkty Ruchu,\n"
+"    tracisz 3 \\svg{gold}, otrzujesz \\svg{morale_negative} i losowo odrzucasz 1 kartę z ręki.\n"
 "  \\item Szarżujące Armie poruszają się tylko 2 Punkty Ruchu. Ostatnia Szarżująca Armia porusza się 4 Punkty Ruchu. Podążają najkrótszą\n"
 "    drogą do Kleesive. Jeśli posiadasz kopalnię na kafelku mapy, na który wchodzą, przejmą kopalnię (ale nie ,,wrócą się'' po nią),\n"
-"    a następnie kontynuują najkrótszą drogę do Kleesive. Ignorują wszystko inne. Korzystają także z bonusu 1 PR z Stajni.\n"
+"    a następnie kontynuują najkrótszą drogę do Kleesive. Ignorują wszystko inne. Korzystają także z bonusu 1 Punktu Ruchu ze Stajni.\n"
 "  \\item Szarżujące Armie zawsze poruszają się tak, aby nie ,,blokować'' sobie nawzajem dróg (spowalniając się nawzajem).\n"
 "    Szarżujący Armia, która jest najbliżej Kleesive, będzie poruszała się przed innymi.\n"
 "  \\item Zamek i Bastion mają już zdobyte wszystkie kopalnie na swoim terytorium (kafelki mapy nie-Inferno). Umieść kostki wroga na\n"
 "    wszystkich ich kopalniach.\n"
 "  \\item Twoje mury, bramy i wieża łuczicza w Kleesive są odbudowane po każdej bitwie.\n"
-"  \\item Latające jednostki wroga będą przelatywały nad murami i bramami, aby atakować Twoje jednostki, gdy tylko jest to możliwe.\n"
-"  \\item Strzelające jednostki wroga zawsze zaatakują Wieżę Łucziczą, gdy nie ma innych jednostek strzelających do zaatakowania.\n"
+"  \\item Jednostki \\svg{unit_flying} wroga będą przelatywały nad murami i bramami, aby atakować Twoje jednostki, gdy tylko jest to możliwe.\n"
+"  \\item Jednostki \\svg{unit_ranged} wroga zawsze zaatakują Wieżę Łucziczą, gdy nie ma innych jednostek \\svg{unit_ranged} do zaatakowania.\n"
 "  \\item Jednostki wroga zawsze zaatakują Twoje jednostki, jeśli to możliwe. Tylko wtedy, gdy jest to niemożliwe, będą atakowane bramy,\n"
 "    a następnie mury.\n"
 "\\end{itemize}\n"
