Replace counterstrike with resurrection for better composition

--- a/sections/recommendations.tex
+++ b/sections/recommendations.tex
@@ -47,7 +47,7 @@ The exception to this rule is when there are three Neutral \svg{unit_ground} Uni
 See examples that follow.
 
 \begin{center}
-  \includegraphics[width=0.65\linewidth]{\art/counterstrike.png}
+  \includegraphics[width=0.65\linewidth]{\art/resurrection.png}
 \end{center}
 
 \end{multicols}
