--- a/translations/recommendations.tex/cs.po
+++ b/translations/recommendations.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-07-28 15:06+0200\n"
+"POT-Creation-Date: 2024-07-28 15:27+0200\n"
 "PO-Revision-Date: 2024-07-28 15:06+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -194,7 +194,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\begin{center}\n"
-"  \\includegraphics[width=0.65\\linewidth]{\\art/counterstrike.png}\n"
+"  \\includegraphics[width=0.65\\linewidth]{\\art/resurrection.png}\n"
 "\\end{center}\n"
 "\n"
 msgstr ""
