--- a/translations/recommendations.tex/recommendations.tex.pot
+++ b/translations/recommendations.tex/recommendations.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2024-07-28 15:06+0200\n"
+"POT-Creation-Date: 2024-07-28 15:27+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -172,7 +172,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\begin{center}\n"
-"  \\includegraphics[width=0.65\\linewidth]{\\art/counterstrike.png}\n"
+"  \\includegraphics[width=0.65\\linewidth]{\\art/resurrection.png}\n"
 "\\end{center}\n"
 "\n"
 msgstr ""
