Fix exception description

--- a/translations/recommendations.tex/cs.po
+++ b/translations/recommendations.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-07-28 15:27+0200\n"
+"POT-Creation-Date: 2024-07-28 16:13+0200\n"
 "PO-Revision-Date: 2024-07-28 15:06+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -184,7 +184,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "Placing Neutral Units far apart only makes the other player waste MPs, and that slows the game down.\n"
-"The exception to this rule is when there are three Neutral \\svg{unit_ground} Units to position, as all of them must go the front line.\n"
+"The exception to this rule is when there are three Neutral \\svg{unit_ground} or \\svg{unit_flying} Units to position, as all of them must go the front line.\n"
 "See examples that follow.\n"
 "\n"
 msgstr ""
@@ -204,22 +204,22 @@ msgstr ""
 #, no-wrap
 msgid ""
 "[!h]\n"
-"  \\mbox{}%\n"
-"  \\hfill%\n"
+"  \\mbox{}\n"
+"  \\hfill\n"
 "  \\begin{minipage}[t]{0.44\\textwidth}\n"
 "    \\centering\n"
 "    \\includegraphics[width=\\linewidth]{\\examples/battle_good.png}\n"
 "    \\caption[good protected]{\\textit{Neutral Units are positioned correctly.}}\n"
 "  \\end{minipage}\n"
-"  \\hfill%\n"
+"  \\hfill\n"
 "  \\begin{minipage}[t]{0.44\\textwidth}\n"
 "    \\centering\n"
 "    \\includegraphics[width=\\linewidth]{\\examples/battle_bad.png}\n"
 "    \\caption[bad protected]{\\textit{This is not allowed, as the Necropolis player deployd their Units on the left half of the Combat Board.\n"
 "      The Peasants must start the Combat on the left side too.}}\n"
 "  \\end{minipage}\n"
-"  \\hfill%\n"
-"  \\mbox{}%"
+"  \\hfill\n"
+"  \\mbox{}"
 msgstr ""
 
 #. type: figure*
@@ -227,21 +227,21 @@ msgstr ""
 #, no-wrap
 msgid ""
 "[!h]\n"
-"  \\mbox{}%\n"
-"  \\hfill%\n"
+"  \\mbox{}\n"
+"  \\hfill\n"
 "  \\begin{minipage}[t]{0.44\\textwidth}\n"
 "    \\centering\n"
 "    \\includegraphics[width=\\linewidth]{\\examples/battle_exception.png}\n"
-"    \\caption[exception protected]{\\textit{Exception: three \\svg{unit_ground} Units must go to the front line.}}\n"
+"    \\caption[exception protected]{\\textit{\\textbf{Exception:} three non-\\svg{unit_ranged} Units must go to the front line.}}\n"
 "  \\end{minipage}\n"
-"  \\hfill%\n"
+"  \\hfill\n"
 "  \\begin{minipage}[t]{0.44\\textwidth}\n"
 "    \\centering\n"
 "    \\includegraphics[width=\\linewidth]{\\examples/battle_ranged_bad.png}\n"
 "    \\caption[ranged protected]{\\textit{The Boars must occupy one of the green fields.}}\n"
 "  \\end{minipage}\n"
-"  \\hfill%\n"
-"  \\mbox{}%"
+"  \\hfill\n"
+"  \\mbox{}"
 msgstr ""
 
 #. type: multicols
