--- a/sections/recommendations.tex
+++ b/sections/recommendations.tex
@@ -43,7 +43,7 @@ Although rules as written state that you can remove only one card from your hand
 During combat with Neutral Units in clash sccenarios, if a player decides to deploy their Units only on one half (left or right one) of the battle board, the player positioning the Neutral Units must follow suit.
 
 Placing Neutral Units far apart only makes the other player waste MPs, and that slows the game down.
-The exception to this rule is when there are three Neutral \svg{unit_ground} Units to position, as all of them must go the front line.
+The exception to this rule is when there are three Neutral \svg{unit_ground} or \svg{unit_flying} Units to position, as all of them must go the front line.
 See examples that follow.
 
 \begin{center}
@@ -53,42 +53,42 @@ See examples that follow.
 \end{multicols}
 
 \begin{figure*}[!h]
-  \mbox{}%
-  \hfill%
+  \mbox{}
+  \hfill
   \begin{minipage}[t]{0.44\textwidth}
     \centering
     \includegraphics[width=\linewidth]{\examples/battle_good.png}
     \caption[good protected]{\textit{Neutral Units are positioned correctly.}}
   \end{minipage}
-  \hfill%
+  \hfill
   \begin{minipage}[t]{0.44\textwidth}
     \centering
     \includegraphics[width=\linewidth]{\examples/battle_bad.png}
     \caption[bad protected]{\textit{This is not allowed, as the Necropolis player deployd their Units on the left half of the Combat Board.
       The Peasants must start the Combat on the left side too.}}
   \end{minipage}
-  \hfill%
-  \mbox{}%
+  \hfill
+  \mbox{}
 \end{figure*}
 
 \clearpage
 
 \begin{figure*}[!h]
-  \mbox{}%
-  \hfill%
+  \mbox{}
+  \hfill
   \begin{minipage}[t]{0.44\textwidth}
     \centering
     \includegraphics[width=\linewidth]{\examples/battle_exception.png}
-    \caption[exception protected]{\textit{Exception: three \svg{unit_ground} Units must go to the front line.}}
+    \caption[exception protected]{\textit{\textbf{Exception:} three non-\svg{unit_ranged} Units must go to the front line.}}
   \end{minipage}
-  \hfill%
+  \hfill
   \begin{minipage}[t]{0.44\textwidth}
     \centering
     \includegraphics[width=\linewidth]{\examples/battle_ranged_bad.png}
     \caption[ranged protected]{\textit{The Boars must occupy one of the green fields.}}
   \end{minipage}
-  \hfill%
-  \mbox{}%
+  \hfill
+  \mbox{}
 \end{figure*}
 
 \begin{multicols}{2}
