--- a/sections/recommendations.tex
+++ b/sections/recommendations.tex
@@ -4,7 +4,7 @@
 \iftoggle{printable}{}{\bigbreak}
 
 \begin{multicols}{2}
-We've gathered up some custom rules and best practices to make your gaming experience as smooth as possible.
+We've gathered some custom rules and best practices to make your gaming experience as smooth as possible.
 Bear in mind that those are just \textbf{opinions of the authors} of this book.
 Enjoy.
 
@@ -24,7 +24,7 @@ Where:
 
 Therefore, if you're playing a 3-player scenario consisting of 12 rounds, you can easily calculate that $3 × 12 × 5 = 180$.
 Your expected minimal play time should be around 3 hours.
-To calculate the \textbf{upper bound} of your play time (more realistic if there are inexperienced players), just double the result.
+To calculate the \textbf{upper bound} of your play time (more realistic if there are inexperienced players), simply double the result.
 So in this case that would be 6 hours.
 
 \subsection*{Magic Arrows}
@@ -40,7 +40,7 @@ Although rules as written state that you can remove only one card from your hand
 
 \subsection*{Combat with Neutral Units}
 
-During combat with Neutral Units in clash sccenarios, if a player decides to deploy their Units only on one half (left or right one) of the battle board, the player positioning the Neutral Units must follow suit.
+During combat with Neutral Units in clash scenarios, if a player decides to deploy their Units only on one half (left or right one) of the battle board, the player positioning the Neutral Units must follow suit.
 
 Placing Neutral Units far apart only makes the other player waste MPs, and that slows the game down.
 The exception to this rule is when there are three Neutral \svg{unit_ground} or \svg{unit_flying} Units to position, as all of them must go the front line.
@@ -64,7 +64,7 @@ See examples that follow.
   \begin{minipage}[t]{0.44\textwidth}
     \centering
     \includegraphics[width=\linewidth]{\examples/battle_bad.png}
-    \caption[bad protected]{\textit{This is not allowed, as the Necropolis player deployd their Units on the left half of the Combat Board.
+    \caption[bad protected]{\textit{This is not allowed, as the Necropolis player deployed their Units on the left half of the Combat Board.
       The Peasants must start the Combat on the left side too.}}
   \end{minipage}
   \hfill
