Fix grammar and style

--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -67,7 +67,7 @@ If the Dragon Boss still lives at the end of the \nth{14} round, all players los
 
 \textbf{\nth{4}, \nth{8} and \nth{12} Rounds:}
 \begin{itemize}
-  \item Remove all Black cubes from all the Water Wheels, Windmills and Markets of Time on the map.
+  \item Remove all Black cubes from all the Water Wheels, Windmills and Mystical Gardens on the map.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
