--- a/translations/the_hunt.tex/fr.po
+++ b/translations/the_hunt.tex/fr.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-07-28 15:06+0200\n"
+"POT-Creation-Date: 2024-07-28 21:08+0200\n"
 "PO-Revision-Date: 2024-06-29 16:13+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -241,7 +241,7 @@ msgstr ""
 msgid ""
 "\\textbf{\\nth{4}, \\nth{8} and \\nth{12} Rounds:}\n"
 "\\begin{itemize}\n"
-"  \\item Remove all Black cubes from all the Water Wheels, Windmills and Markets of Time on the map.\n"
+"  \\item Remove all Black cubes from all the Water Wheels, Windmills and Mystical Gardens on the map.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
