--- a/sections/recommendations.tex
+++ b/sections/recommendations.tex
@@ -4,9 +4,9 @@
 \iftoggle{printable}{}{\bigbreak}
 
 \begin{multicols}{2}
-We've gathered some custom rules and best practices to make your gaming experience as smooth as possible.
-Bear in mind that those are just \textbf{opinions of the authors} of this book.
-Enjoy.
+We've compiled some custom rules and best practices to enhance your gaming experience.
+Keep in mind that these are just the \textbf{opinions of the authors} of this book.
+Enjoy!
 
 \subsection*{Play Time}
 
@@ -22,15 +22,16 @@ Where:
   \item[$\textbf{R}$] -- number of rounds
 \end{itemize}
 
-Therefore, if you're playing a 3-player scenario consisting of 12 rounds, you can easily calculate that $3 × 12 × 5 = 180$.
-Your expected minimal play time should be around 3 hours.
+For example, if you're playing a 3-player scenario consisting of 12 rounds, you can easily calculate that $3 \times 12 \times 5 = 180$.
+Your expected minimal play time would be around 3 hours.
+
 To calculate the \textbf{upper bound} of your play time (more realistic if there are inexperienced players), simply double the result.
-So in this case that would be 6 hours.
+In this case, that would be 6 hours.
 
 \subsection*{Magic Arrows}
 
-Except for the Magic Arrow, every spell appears exactly twice in the spell deck.
-After players prepare their starting M\&M decks, it is recommended to remove as many Magic Arrows from the spell deck, so that at most two of them remain.
+Except for the Magic Arrow, each spell appears exactly twice in the spell deck.
+After players prepare their starting M\&M decks, it is recommended to remove Magic Arrows from the spell deck until no more than two remain.
 
 \subsection*{Trading Post}
 
@@ -40,10 +41,10 @@ Although rules as written state that you can remove only one card from your hand
 
 \subsection*{Combat with Neutral Units}
 
-During combat with Neutral Units in clash scenarios, if a player decides to deploy their Units only on one half (left or right one) of the battle board, the player positioning the Neutral Units must follow suit.
+During combat with Neutral Units in clash scenarios, if a player decides to deploy their Units only on one half (left or right) of the battle board, the player positioning the Neutral Units must do the same.
 
-Placing Neutral Units far apart only makes the other player waste MPs, and that slows the game down.
-The exception to this rule is when there are three Neutral \svg{unit_ground} or \svg{unit_flying} Units to position, as all of them must go the front line.
+Placing Neutral Units far apart only makes the other player waste MPs, which slows the game down.
+The exception to this rule is when there are three Neutral \svg{unit_ground} or \svg{unit_flying} Units to position, as all of them must go to the front line.
 See examples that follow.
 
 \begin{center}
@@ -64,8 +65,8 @@ See examples that follow.
   \begin{minipage}[t]{0.44\textwidth}
     \centering
     \includegraphics[width=\linewidth]{\examples/battle_bad.png}
-    \caption[bad protected]{\textit{This is not allowed, as the Necropolis player deployed their Units on the left half of the Combat Board.
-      The Peasants must start the Combat on the left side too.}}
+    \caption[bad protected]{\textit{This deployment is not allowed because the Necropolis player placed their Units on the left half of the Combat Board.
+      The Peasants must also start the Combat on the left side.}}
   \end{minipage}
   \hfill
   \mbox{}
@@ -79,7 +80,7 @@ See examples that follow.
   \begin{minipage}[t]{0.44\textwidth}
     \centering
     \includegraphics[width=\linewidth]{\examples/battle_exception.png}
-    \caption[exception protected]{\textit{\textbf{Exception:} three non-\svg{unit_ranged} Units must go to the front line.}}
+    \caption[exception protected]{\textit{\textbf{Exception:} Three non-\svg{unit_ranged} Units must be positioned on the front line.}}
   \end{minipage}
   \hfill
   \begin{minipage}[t]{0.44\textwidth}
@@ -95,12 +96,13 @@ See examples that follow.
 
 \subsection*{General Recommendations}
 
-The following are not custom rules, but more like recommendations on how to get the most out of your game:
+The following are not custom rules but rather recommendations to help you get the most out of your game:
+
 \begin{itemize}
-  \item When deciding which building in your town to build, especially in the early game, it is \textit{usually} recommended to go for units, not city hall, mages guild or anything else faction-specific.
-  \item If you struggle which spell, artifact or ability to pick, in general it's best to prioritize those that allow you to cycle through your deck.
-    This means anything that can draw cards or pick cards from your discard pile.
-  \item Try to limit spending the movement points of your main Hero on actions that the Secondary Hero can do, like flipping the Map tiles.
+  \item When deciding which building to construct in your town, especially in the early game, it is \textit{usually} best to prioritize units over the city hall, mage guild, or other faction-specific buildings.
+  \item If you're unsure which spell, artifact, or ability to choose, prioritize those that help you cycle through your deck.
+    This includes any cards that allow you to draw cards or retrieve cards from your discard pile.
+  \item Try to avoid using your main Hero's movement points for actions that your Secondary Hero can handle, such as flipping the Map tiles, visiting Water Wheels, and so on.
 \end{itemize}
 
 \begin{center}
