--- a/translations/the_hunt.tex/the_hunt.tex.pot
+++ b/translations/the_hunt.tex/the_hunt.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2024-07-28 15:06+0200\n"
+"POT-Creation-Date: 2024-07-28 21:08+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -241,7 +241,7 @@ msgstr ""
 msgid ""
 "\\textbf{\\nth{4}, \\nth{8} and \\nth{12} Rounds:}\n"
 "\\begin{itemize}\n"
-"  \\item Remove all Black cubes from all the Water Wheels, Windmills and Markets of Time on the map.\n"
+"  \\item Remove all Black cubes from all the Water Wheels, Windmills and Mystical Gardens on the map.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
